Added image to Hello World

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
+    <div><img src="a4.jpeg" alt="Hello World from Space"
+        style="width:100%;max-width:960px"></div>
     <h1>hello word</h1>
     <p>this is my first page</p>
     <p>A new line in our file!</p>
