--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="bluestyle.css">
+<title>Hello World!</title>
+<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-    <div><img src="a4.jpeg" alt="Hello World from Space"
-        style="width:100%;max-width:960px"></div>
-    <h1>hello word</h1>
-    <p>this is my first page</p>
-    <p>A new line in our file!</p>
+
+<h1>Hello world!</h1>
+<div><img src="a4.jpeg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+<p>This is the first file in my new Git Repo.</p>
+<p>A new line in our file!</p>
+<div><img src="a4.jpeg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+
 </body>
-</html>
+</html
