--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Hello World!</title>
@@ -6,7 +7,7 @@
 <body>
 
 <h1>Hello world!</h1>
-<div><img src="a4.jpeg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+<div><img src="a4.jpeg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="a4.jpeg" alt="Hello Git" style="width:100%;max-width:640px"></div>
